Prevent display going to sleep while taking a screenshot

On MacOS, GrabViewSnapshot() call would block for the duration of
display/GPU sleep which leads to protocol client to wait and tests
to time out when power saving is engaged. This prevents power saving
while there are pending screenshot requests.

BUG=599776

Review-Url: https://codereview.chromium.org/2044783002
Cr-Commit-Position: refs/heads/master@{#398245}

Former-commit-id: 2d6574bd49f71c153f24f0e78671fbcb481a2aaa