content/browser/renderer_host/render_widget_host_impl.h
@@ -87,6 +87,10 @@ struct EditCommand;
 struct ResizeParams;
 struct TextInputState;
 
+#if defined(OS_MACOSX)
+class PowerSaveBlocker;
+#endif
+
 // This implements the RenderWidgetHost interface that is exposed to
 // embedders of content, and adds things only visible to content.
 class CONTENT_EXPORT RenderWidgetHostImpl : public RenderWidgetHost,
@@ -820,6 +824,10 @@ class CONTENT_EXPORT RenderWidgetHostImpl : public RenderWidgetHost,
   // This value indicates how long to wait for a new compositor frame from a
   // renderer process before clearing any previously displayed content.
   base::TimeDelta new_content_rendering_delay_;
+
+#if defined(OS_MACOSX)
+  std::unique_ptr<PowerSaveBlocker> power_save_blocker_;
+#endif
 
   base::WeakPtrFactory<RenderWidgetHostImpl> weak_factory_;
 
